Complete the port